Fix: i18n header in shelters index, blank fields in profile and pets page; Add: links to map on shelters and truncate description

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -198,7 +198,7 @@ a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 200px;
+    height: 190px;
     // flex-direction: row;
   }
 
